# MScreenRecord

./: .gitignore  CMakeLists.txt  README.md  app.rc.in  check_files.bat  debug_run.bat  diagnose_v1.2.bat  launcher.bat  package_installer.bat  package_mac.sh  package_win.bat  setup_script.iss  unregister_audio_sniffer.bat  version.bat
include/: AppVersion.h  CountdownOverlay.h  CustomMessageBox.h  FloatingBall.h  GlobalHotkey.h  HistoryManager.h  HotkeyEdit.h  LogManager.h  MainWindow.h  NativePlayerWidget.h  RangeSlider.h  RecorderController.h  SelectionOverlay.h  SettingsDialog.h  ThemePatternWidget.h  ToastTip.h  VideoUtils.h
src/: CountdownOverlay.cpp  CustomMessageBox.cpp  FloatingBall.cpp  GlobalHotkey.cpp  HistoryManager.cpp  HotkeyEdit.cpp  LogManager.cpp  MainWindow.cpp  NativePlayerWidget.cpp  RangeSlider.cpp  RecorderController.cpp  RecorderController_methods.cpp  SelectionOverlay.cpp  SettingsDialog.cpp  ToastTip.cpp  VideoUtils.cpp  main.cpp
